--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -27,9 +27,9 @@ requirements:
     - python >=${{ python_min }}
     - numpy
     - ${{ "numpy =1.26" if match(python, ">=3.12") }}
-    - ${{ "numpy =1.23" if match(python, ">=3.11") }}
-    - ${{ "numpy =1.22" if match(python, ">=3.10") }}
-    - ${{ "numpy =1.22" if match(python, ">=3.9") }}
+    - ${{ "numpy =1.23" if match(python, "=3.11") }}
+    - ${{ "numpy =1.22" if match(python, "=3.10") }}
+    - ${{ "numpy =1.22" if match(python, "=<3.9") }}
     - torchvision
     - pytorch >=2.2.2,<3.0.0
     - jsonlines >=3.1.0,<4.0.0
