--- a/pixi.toml
+++ b/pixi.toml
@@ -18,14 +18,8 @@ rattler-build = "*"
 [tasks]
 inspect-all = "inspect_artifacts --all-packages"
 build = "rattler-build build --recipe recipe"
-"build-linux_64_python3.12.____cpython" = "rattler-build build --recipe recipe -m .ci_support/linux_64_python3.12.____cpython.yaml"
-"inspect-linux_64_python3.12.____cpython" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_python3.12.____cpython.yaml"
-"build-linux_64_python3.11.____cpython" = "rattler-build build --recipe recipe -m .ci_support/linux_64_python3.11.____cpython.yaml"
-"inspect-linux_64_python3.11.____cpython" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_python3.11.____cpython.yaml"
-"build-linux_64_python3.9.____cpython" = "rattler-build build --recipe recipe -m .ci_support/linux_64_python3.9.____cpython.yaml"
-"inspect-linux_64_python3.9.____cpython" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_python3.9.____cpython.yaml"
-"build-linux_64_python3.10.____cpython" = "rattler-build build --recipe recipe -m .ci_support/linux_64_python3.10.____cpython.yaml"
-"inspect-linux_64_python3.10.____cpython" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_python3.10.____cpython.yaml"
+"build-linux_64_" = "rattler-build build --recipe recipe -m .ci_support/linux_64_.yaml"
+"inspect-linux_64_" = "inspect_artifacts --recipe-dir recipe -m .ci_support/linux_64_.yaml"
 
 [feature.smithy.dependencies]
 conda-smithy = "*"
