--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -22,7 +22,7 @@ requirements:
     - poetry-core >=1.0.0
     - pip
   run:
-    - python >=${{ python_min }}.*
+    - python >=${{ python_min }}
     - pytorch >=2.2.2,<3.0.0
     - torchvision
     - transformers >=4.42.0
