--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -28,7 +28,7 @@ requirements:
     - pytorch >=2.2.2,<3.0.0
     - torchvision
     - transformers >=4.42.0
-    - numpy >=1.22
+    - numpy >=1.22,<3.0.0
     - jsonlines >=3.1.0,<4.0.0
     - pillow >=10.0.0,<11.0.0
     - tqdm >=4.64.0,<5.0.0
