--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -27,7 +27,7 @@ requirements:
     - python >=${{ python_min }}
     - pytorch >=2.2.2,<3.0.0
     - torchvision
-    - transformers >=4.42.0,5.0.0
+    - transformers >=4.42.0,<5.0.0
     - numpy >=1.22,<3.0.0
     - jsonlines >=3.1.0,<4.0.0
     - pillow >=10.0.0,<11.0.0
