--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -35,6 +35,8 @@ requirements:
     - py-opencv >=4.6.0.66,<5.0.0
     - huggingface_hub >=0.23,<1.0.0
     - safetensors >=0.4.3,<1
+    - pydantic >=2.0.0,<3
+    - docling-core >=2.19.0,<3
 
 tests:
   - python:
