--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -20,22 +20,22 @@ build:
 requirements:
   host:
     - python ${{ python_min }}.*
-    - poetry-core >=1.0.0
+    - setuptools
     - pip
   run:
     - python >=${{ python_min }}
     - pytorch >=2.2.2,<3.0.0
-    - torchvision
-    - transformers >=4.42.0,<5.0.0
-    - numpy >=1.22,<3.0.0
+    - torchvision >=0,<1
     - jsonlines >=3.1.0,<4.0.0
     - pillow >=10.0.0,<12.0.0
     - tqdm >=4.64.0,<5.0.0
-    - py-opencv >=4.6.0.66,<5.0.0
-    - huggingface_hub >=0.23,<1.0.0
+    - opencv-python-headless >=4.6.0.66,<5.0.0.0
+    - huggingface_hub >=0.23,<1
     - safetensors >=0.4.3,<1
-    - pydantic >=2.0.0,<3
-    - docling-core >=2.19.0,<3
+    - pydantic >=2.0.0,<3.0.0
+    - docling-core >=2.19.0,<3.0.0
+    - transformers >=4.42.0,<5.0.0
+    - numpy >=1.24.4,<3.0.0
 
 tests:
   - python:
