--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -29,7 +29,7 @@ requirements:
     - jsonlines >=3.1.0,<4.0.0
     - pillow >=10.0.0,<12.0.0
     - tqdm >=4.64.0,<5.0.0
-    - opencv-python-headless >=4.6.0.66,<5.0.0.0
+    - py-opencv >=4.6.0.66,<5.0.0.0
     - huggingface_hub >=0.23,<1
     - safetensors >=0.4.3,<1
     - pydantic >=2.0.0,<3.0.0
