--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -36,6 +36,7 @@ requirements:
     - docling-core >=2.19.0,<3.0.0
     - transformers >=4.42.0,<5.0.0
     - numpy >=1.24.4,<3.0.0
+    - rtree >=1.0.0
 
 tests:
   - python:
